--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -92,6 +92,7 @@ public:
 
    // interface functions
    virtual void calculate_spectrum();
+   virtual void clear_problems();
    virtual std::string name() const;
    virtual void run_to(double scale, double eps = -1.0);
    virtual void print(std::ostream&) const;
