--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -75,6 +75,8 @@ int main(int argc, const char* argv[])
       spectrum_generator_settings.get(Spectrum_generator_settings::max_iterations));
    spectrum_generator.set_calculate_sm_masses(
       spectrum_generator_settings.get(Spectrum_generator_settings::calculate_sm_masses) >= 1.0);
+   spectrum_generator.set_force_output(
+      spectrum_generator_settings.get(Spectrum_generator_settings::force_output) >= 1.0);
    spectrum_generator.set_parameter_output_scale(
       slha_io.get_parameter_output_scale());
    spectrum_generator.set_pole_mass_loop_order(
@@ -104,7 +106,8 @@ int main(int argc, const char* argv[])
    slha_io.set_sminputs(oneset);
    slha_io.set_minpar(input);
    slha_io.set_extpar(input);
-   if (!problems.have_problem()) {
+   if (!problems.have_problem() ||
+       spectrum_generator_settings.get(Spectrum_generator_settings::force_output)) {
       slha_io.set_spectrum(model);
       slha_io.set_extra(model, scales);
    }
