implementation sketch of CP-odd and charged Higgs mass getters

--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -102,6 +102,7 @@ public:
 
 @lspGetters@
 @massGetters@
+@higgsMassGetterPrototypes@
 @mixingMatrixGetters@
 @phasesGetterSetters@
 @massCalculationPrototypes@
