--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -57,6 +57,7 @@ private:
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters inputPars;
    QedQcd oneset;
+   double MWDRbar;
    double MZDRbar;
    double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
