split calculate_DRbar_gauge_couplings() into two functions
by introducing calculate_threshold_corrections() which calculates only
the threshold corrections (MZ DR-bar, MW DR-bar, alpha_s DR-bar, e
DR-bar).  The variables MZ DR-bar, MW DR-bar, alpha_s DR-bar, e DR-bar
are now member variables and can be used anywhere.

--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -59,9 +59,12 @@ private:
    QedQcd oneset;
    double MWDRbar;
    double MZDRbar;
+   double AlphaS;
+   double EDRbar;
    double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
 
+   void calculate_threshold_corrections();
    void calculate_DRbar_gauge_couplings();
    void calculate_DRbar_yukawa_couplings();
    void calculate_@UpYukawa@_DRbar();
