--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -52,6 +52,8 @@ namespace flexiblesusy {
    , oneset()
    , MWDRbar(0.)
    , MZDRbar(0.)
+   , AlphaS(0.)
+   , EDRbar(0.)
    , new_@hyperchargeCoupling@(0.)
    , new_@leftCoupling@(0.)
    , new_@strongCoupling@(0.)
@@ -126,6 +128,8 @@ void @ModelName@_low_scale_constraint<Two_scale>::clear()
    oneset = QedQcd();
    MWDRbar = 0.;
    MZDRbar = 0.;
+   AlphaS = 0.;
+   EDRbar = 0.;
    new_@hyperchargeCoupling@ = 0.;
    new_@leftCoupling@ = 0.;
    new_@strongCoupling@ = 0.;
@@ -141,6 +145,8 @@ void @ModelName@_low_scale_constraint<Two_scale>::initialize()
 
    MWDRbar = 0.;
    MZDRbar = 0.;
+   AlphaS = 0.;
+   EDRbar = 0.;
    new_@hyperchargeCoupling@ = 0.;
    new_@leftCoupling@ = 0.;
    new_@strongCoupling@ = 0.;
@@ -155,7 +161,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::update_scale()
 @restrictScale@
 }
 
-void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_couplings()
+void @ModelName@_low_scale_constraint<Two_scale>::calculate_threshold_corrections()
 {
    assert(oneset.displayMu() == get_scale() && "Error: low-energy data"
           " set is not defined at the same scale as the low-energy"
@@ -186,8 +192,13 @@ void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_coupling
       MWDRbar = model->calculate_M@VectorW@_DRbar(oneset.displayPoleMW());
    }
 
-   const double AlphaS = alpha_s_drbar;
-   const double EDRbar = e_drbar;
+   AlphaS = alpha_s_drbar;
+   EDRbar = e_drbar;
+}
+
+void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_couplings()
+{
+   calculate_threshold_corrections();
 
 @calculateGaugeCouplings@
 }
