calculate ThetaW inside calculate_threshold_corrections()
Now, all DR-bar threshold correction variables (MZDRbar, MWDRbar,
AlphaS, EDRbar, ThetaW) are consistently calculated within
calculate_threshold_corrections() .

--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -61,6 +61,7 @@ private:
    double MZDRbar;
    double AlphaS;
    double EDRbar;
+   double ThetaW;
    double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
 
