--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -54,6 +54,7 @@ namespace flexiblesusy {
    , MZDRbar(0.)
    , AlphaS(0.)
    , EDRbar(0.)
+   , ThetaW(0.)
    , new_@hyperchargeCoupling@(0.)
    , new_@leftCoupling@(0.)
    , new_@strongCoupling@(0.)
@@ -130,6 +131,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::clear()
    MZDRbar = 0.;
    AlphaS = 0.;
    EDRbar = 0.;
+   ThetaW = 0.;
    new_@hyperchargeCoupling@ = 0.;
    new_@leftCoupling@ = 0.;
    new_@strongCoupling@ = 0.;
@@ -147,6 +149,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::initialize()
    MZDRbar = 0.;
    AlphaS = 0.;
    EDRbar = 0.;
+   ThetaW = 0.;
    new_@hyperchargeCoupling@ = 0.;
    new_@leftCoupling@ = 0.;
    new_@strongCoupling@ = 0.;
@@ -194,6 +197,7 @@ void @ModelName@_low_scale_constraint<Two_scale>::calculate_threshold_correction
 
    AlphaS = alpha_s_drbar;
    EDRbar = e_drbar;
+@calculateThetaW@
 }
 
 void @ModelName@_low_scale_constraint<Two_scale>::calculate_DRbar_gauge_couplings()
