write default setting for weak mixing angle input into model file

--- a/model_files/CMSSM/FlexibleSUSY.m.in
+++ b/model_files/CMSSM/FlexibleSUSY.m.in
@@ -68,6 +68,11 @@ InitialGuessAtHighScale = {
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 
+(* low-energy input to determine weak mixing angle
+ * Possible values: FSFermiConstant (default), FSMassW
+ *)
+FSWeakMixingAngleInput = FSFermiConstant;
+
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
 
 DefaultPoleMassPrecision = MediumPrecision;
