--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -74,6 +74,7 @@ private:
    void calculate_@ElectronYukawa@_DRbar();
    double calculate_delta_alpha_em(double) const;
    double calculate_delta_alpha_s(double) const;
+   void recalculate_mw_pole();
    void update_scale();
 };
 
