--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -61,7 +61,7 @@ private:
    double MZDRbar;
    double AlphaS;
    double EDRbar;
-   double ThetaW;
+   double ThetaWDRbar;
    double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    unsigned threshold_corrections_loop_order; ///< threshold corrections loop order
 
