enable Fermi constant input for non-flavour-violating models
by specifying the left-handed sfermions

--- a/model_files/CMSSM/FlexibleSUSY.m.in
+++ b/model_files/CMSSM/FlexibleSUSY.m.in
@@ -71,7 +71,7 @@ EffectiveMu = \[Mu];
 (* low-energy input to determine weak mixing angle
  * Possible values: FSFermiConstant (default), FSMassW
  *)
-FSWeakMixingAngleInput = FSFermiConstant;
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSWeakMixingAngleInput -> FSFermiConstant];
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
 
