--- a/model_files/MSSMNoFV/FlexibleSUSY.m.in
+++ b/model_files/MSSMNoFV/FlexibleSUSY.m.in
@@ -112,6 +112,15 @@ InitialGuessAtHighScale = {
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 
+(* low-energy input to determine weak mixing angle
+ * Possible values: FSFermiConstant (default), FSMassW
+ *)
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSWeakMixingAngleInput -> FSFermiConstant];
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSSelectronL -> Sum[conj[ZE[i,1]] ZE[i,1] M[Se[i]], {i,1,2}]];
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSSmuonL     -> Sum[conj[ZM[i,1]] ZM[i,1] M[Sm[i]], {i,1,2}]];
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSSelectronNeutrinoL -> M[SveL]];
+FSWeakMixingAngleOptions = FSSetOption[FSWeakMixingAngleOptions, FSSmuonNeutrinoL     -> M[SvmL]];
+
 ExtraSLHAOutputBlocks = {
    {FlexibleSUSYOutput,
            {{0, Hold[HighScale]},
