--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -47,6 +47,7 @@ public:
    void clear();
    double get_initial_scale_guess() const;
    void initialize();
+   const QedQcd& get_sm_parameters() const;
    void set_input_parameters(const @ModelName@_input_parameters&);
    void set_sm_parameters(const QedQcd&);
    void set_threshold_corrections_loop_order(unsigned); ///< threshold corrections loop order
