copy calculated W pole mass from low-scale constraint to model class
Note: If the low-energy constraint uses G_Fermi as input, the W pole
mass is predicted and stored in the QedQcd object in the low-energy
constraint.  This patch copies the predicted value to the model class,
thereby overwriting the value calculated by the model class.

If the low-energy constraint uses MW as input, the W pole mass is not
predicted.  This patch then copies the input value of MW to the model
class, thereby overwriting the value calculated by the model class.

--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -176,6 +176,10 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
       model.solve_ewsb();
       model.calculate_spectrum();
 
+      // copy calculated W pole mass
+      model.get_physical().M@VectorW@
+         = low_scale_constraint.get_sm_parameters().displayPoleMW();
+
       // run to output scale (if scale > 0)
       if (!is_zero(parameter_output_scale)) {
          model.run_to(parameter_output_scale);
