--- a/templates/two_scale_convergence_tester.cpp.in
+++ b/templates/two_scale_convergence_tester.cpp.in
@@ -25,11 +25,20 @@
 
 namespace flexiblesusy {
 
-#define OLD1(p) ol.get_##p()
-#define NEW1(p) ne.get_##p()
+#define OLD(p) ol.get_##p()
+#define NEW(p) ne.get_##p()
 
-#define OLD(p,i) ol.get_##p()(i)
-#define NEW(p,i) ne.get_##p()(i)
+#define OLD1(p,i) ol.get_##p()(i)
+#define NEW1(p,i) ne.get_##p()(i)
+
+#define OLD2(p,i,j) ol.get_##p(i,j)
+#define NEW2(p,i,j) ne.get_##p(i,j)
+
+#define OLD3(p,i,k) ol.get_##p(i,j,k)
+#define NEW3(p,i,k) ne.get_##p(i,j,k)
+
+#define OLD4(p,i,k,l) ol.get_##p(i,j,k,l)
+#define NEW4(p,i,k,l) ne.get_##p(i,j,k,l)
 
 @ModelName@_convergence_tester<Two_scale>::@ModelName@_convergence_tester(@ModelName@<Two_scale>* model, double accuracy_goal)
    : Convergence_tester_DRbar<@ModelName@<Two_scale> >(model, accuracy_goal)
