--- a/templates/two_scale_convergence_tester.cpp.in
+++ b/templates/two_scale_convergence_tester.cpp.in
@@ -34,11 +34,11 @@ namespace flexiblesusy {
 #define OLD2(p,i,j) ol.get_##p(i,j)
 #define NEW2(p,i,j) ne.get_##p(i,j)
 
-#define OLD3(p,i,k) ol.get_##p(i,j,k)
-#define NEW3(p,i,k) ne.get_##p(i,j,k)
+#define OLD3(p,i,j,k) ol.get_##p(i,j,k)
+#define NEW3(p,i,j,k) ne.get_##p(i,j,k)
 
-#define OLD4(p,i,k,l) ol.get_##p(i,j,k,l)
-#define NEW4(p,i,k,l) ne.get_##p(i,j,k,l)
+#define OLD4(p,i,j,k,l) ol.get_##p(i,j,k,l)
+#define NEW4(p,i,j,k,l) ne.get_##p(i,j,k,l)
 
 @ModelName@_convergence_tester<Two_scale>::@ModelName@_convergence_tester(@ModelName@<Two_scale>* model, double accuracy_goal)
    : Convergence_tester_DRbar<@ModelName@<Two_scale> >(model, accuracy_goal)
