--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,8 @@ model_files/CMSSMGSLHybrid      export-ignore
 model_files/CMSSMGSLHybridS     export-ignore
 model_files/CMSSMGSLNewton      export-ignore
 model_files/CMSSMLowPrecision   export-ignore
+model_files/CMSSMMediumPrecision export-ignore
+model_files/CMSSMHighPrecision  export-ignore
 model_files/CMSSMMassWInput     export-ignore
 model_files/InertMSSM           export-ignore
 model_files/LHInputMSSM         export-ignore
