search for models in sarah/ first, then in SARAH/Models/
The purpose of our sarah/ directory is to easily use our own models.
If the desired model does not exist in sarah/ then we search in the
SARAH/Models/ .

--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -10,8 +10,8 @@ Needs["FlexibleSUSY`", FileNameJoin[{$flexiblesusyMetaDir, "FlexibleSUSY.m"}]];
 workingDirectory = Directory[];
 SARAH`SARAH[OutputDirectory] = FileNameJoin[{workingDirectory, "Output"}];
 SARAH`SARAH[InputDirectories] = {
-    ToFileName[{$sarahDir, "Models"}],
-    FileNameJoin[{workingDirectory, "sarah"}]
+    FileNameJoin[{workingDirectory, "sarah"}],
+    ToFileName[{$sarahDir, "Models"}]
 };
 
 Print["Current working directory: ", workingDirectory];
