--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,7 @@ model_files/CMSSMLowPrecision   export-ignore
 model_files/CMSSMMediumPrecision export-ignore
 model_files/CMSSMHighPrecision  export-ignore
 model_files/CMSSMMassWInput     export-ignore
+model_files/CMSSMConvergenceTester export-ignore
 model_files/InertMSSM           export-ignore
 model_files/LHInputMSSM         export-ignore
 model_files/MSSMCPV             export-ignore
