--- a/model_files/NSM/FlexibleSUSY.m.in
+++ b/model_files/NSM/FlexibleSUSY.m.in
@@ -5,25 +5,31 @@ FSEigenstates = SARAH`EWSB;
 (* input parameters *)
 
 MINPAR = {
-    {1, LambdaInput1},
-    {2, LambdaInput2},
-    {3, LambdaInput3},
-    {4, LambdaInput4},
-    {5, LambdaInput5}
+    {1, Lambda1Input},
+    {2, Lambda2Input},
+    {3, Lambda3Input},
+    {4, Lambda4Input},
+    {5, Lambda5Input},
+    {6, vSInput}
+};
+
+EXTPAR = {
+    {0, Qin}
 };
 
 EWSBOutputParameters = { mH2, mS2 };
 
-SUSYScale = vS;
+SUSYScale = Qin;
 
 SUSYScaleFirstGuess = 1000;
 
 SUSYScaleInput = {
-    {\[Lambda]1, LambdaInput1},
-    {\[Lambda]2, LambdaInput2},
-    {\[Lambda]3, LambdaInput3},
-    {\[Lambda]4, LambdaInput4},
-    {\[Lambda]5, LambdaInput5}
+    {\[Lambda]1, Lambda1Input},
+    {\[Lambda]2, Lambda2Input},
+    {\[Lambda]3, Lambda3Input},
+    {\[Lambda]4, Lambda4Input},
+    {\[Lambda]5, Lambda5Input},
+    {vS, vSInput}
 };
 
 LowScale = SM[MZ];
@@ -31,19 +37,17 @@ LowScale = SM[MZ];
 LowScaleFirstGuess = SM[MZ];
 
 LowScaleInput = {
+   {vH, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]},
    {Yu, Automatic},
    {Yd, Automatic},
-   {Ye, Automatic},
-   {vH, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]},
-   {vS, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2]}
+   {Ye, Automatic}
 };
 
 InitialGuessAtLowScale = {
+   {vH, SM[vev]},
    {Yu, Automatic},
    {Yd, Automatic},
-   {Ye, Automatic},
-   {vH, SM[vev]},
-   {vS, SM[vev]}
+   {Ye, Automatic}
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
