use input scale as first high-scale guess

--- a/model_files/MSSM/FlexibleSUSY.m.in
+++ b/model_files/MSSM/FlexibleSUSY.m.in
@@ -31,7 +31,7 @@ SUSYScaleInput = {};
 
 HighScale = Qin;
 
-HighScaleFirstGuess = 2.0 10^16;
+HighScaleFirstGuess = Qin;
 
 HighScaleInput = {
    {T[Ye], Aeij*Ye},
