don't give error when no argument is passed, just print nothing
flexiblesusy-config behaves cumulative.  It makes perfect sense to
print nothing if no argument is given.

--- a/config/flexiblesusy-config.in
+++ b/config/flexiblesusy-config.in
@@ -45,11 +45,6 @@ Usage: `basename $0`\
  [--version]\
 "
 
-if test $# -eq 0; then
-    echo "${usage}" 1>&2
-    exit 1
-fi
-
 help() {
 cat <<EOF
 Usage: `basename $0` [options]
@@ -124,7 +119,7 @@ while test $# -gt 0; do
             ;;
         *)
       ### Give an error
-            echo "Unknown argument \"$1\"!" 1>&2
+            echo "Unknown argument: $1" 1>&2
             echo "${usage}" 1>&2
             exit 1
             ;;
