generate consts for normalizations of gauge couplings

--- a/templates/info.cpp.in
+++ b/templates/info.cpp.in
@@ -25,6 +25,7 @@
 namespace flexiblesusy {
 
 namespace @ModelName@_info {
+@gaugeCouplingNormalizationDefs@
 @particleMultiplicity@
 @particleNames@
 @particleLaTeXNames@
