adding more built information to the generated C++ source files
This information will be useful for the generated C++ source files in
the "FlexibleSUSY-generated" repository.

--- a/templates/lattice_convergence_tester.cpp.in
+++ b/templates/lattice_convergence_tester.cpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #include "@ModelName@_lattice_convergence_tester.hpp"
 
