--- a/templates/two_scale_soft_parameters.hpp.in
+++ b/templates/two_scale_soft_parameters.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_TWO_SCALE_soft_parameters_H
 #define @ModelName@_TWO_SCALE_soft_parameters_H
