--- a/templates/utilities.hpp.in
+++ b/templates/utilities.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_UTILITIES_H
 #define @ModelName@_UTILITIES_H
