--- a/templates/input_parameters.hpp.in
+++ b/templates/input_parameters.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_INPUT_PARAMETERS_H
 #define @ModelName@_INPUT_PARAMETERS_H
