--- a/templates/lattice_convergence_tester.hpp.in
+++ b/templates/lattice_convergence_tester.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_LATTICE_CONVERGENCE_TESTER_H
 #define @ModelName@_LATTICE_CONVERGENCE_TESTER_H
