--- a/templates/lattice_initial_guesser.hpp.in
+++ b/templates/lattice_initial_guesser.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_LATTICE_INITIAL_GUESSER_H
 #define @ModelName@_LATTICE_INITIAL_GUESSER_H
