--- a/templates/lattice_low_scale_constraint.cpp.in
+++ b/templates/lattice_low_scale_constraint.cpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #include "@ModelName@_lattice_low_scale_constraint.hpp"
 #include "@ModelName@_lattice_model.hpp"
