--- a/templates/lattice_low_scale_constraint.hpp.in
+++ b/templates/lattice_low_scale_constraint.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_LATTICE_LOW_SCALE_CONSTRAINT_H
 #define @ModelName@_LATTICE_LOW_SCALE_CONSTRAINT_H
