--- a/templates/physical.hpp.in
+++ b/templates/physical.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_PHYSICAL_H
 #define @ModelName@_PHYSICAL_H
