--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #ifndef @ModelName@_SLHA_IO_H
 #define @ModelName@_SLHA_IO_H
