--- a/templates/utilities.cpp.in
+++ b/templates/utilities.cpp.in
@@ -17,6 +17,7 @@
 // ====================================================================
 
 // File generated at @DateAndTime@
+// with FlexibleSUSY @FlexibleSUSYVersion@ (@FlexibleSUSYGitCommit@) and SARAH @SARAHVersion@
 
 #include "@ModelName@_utilities.hpp"
 #include "@ModelName@_input_parameters.hpp"
