--- a/templates/two_scale_model.hpp.in
+++ b/templates/two_scale_model.hpp.in
@@ -36,7 +36,7 @@
 #include "@ModelName@_physical.hpp"
 #include "@ModelName@_info.hpp"
 #include "two_scale_model.hpp"
-#include "higgs_2loop_corrections.hpp"
+#include "two_loop_corrections.hpp"
 #include "problems.hpp"
 #include "config.h"
 
@@ -77,7 +77,7 @@ public:
    void reorder_pole_masses();
    void set_ewsb_iteration_precision(double);
    void set_ewsb_loop_order(unsigned);
-   void set_higgs_2loop_corrections(const Higgs_2loop_corrections&);
+   void set_two_loop_corrections(const Two_loop_corrections&);
    void set_number_of_ewsb_iterations(std::size_t);
    void set_number_of_mass_iterations(std::size_t);
    void set_pole_mass_loop_order(unsigned);
@@ -150,7 +150,7 @@ private:
    static const std::size_t number_of_ewsb_equations = @numberOfEWSBEquations@;
    @ModelName@_physical physical; ///< contains the pole masses and mixings
    Problems<@ModelName@_info::NUMBER_OF_PARTICLES> problems;
-   Higgs_2loop_corrections higgs_2loop_corrections; ///< used Higgs 2-loop corrections
+   Two_loop_corrections two_loop_corrections; ///< used 2-loop corrections
 #ifdef ENABLE_THREADS
    std::exception_ptr thread_exception;
    static std::mutex mtx_fortran; /// locks fortran functions
