adding getters for model and input parameters

--- a/templates/two_scale_susy_scale_constraint.cpp.in
+++ b/templates/two_scale_susy_scale_constraint.cpp.in
@@ -92,6 +92,16 @@ double @ModelName@_susy_scale_constraint<Two_scale>::get_initial_scale_guess() c
    return initial_scale_guess;
 }
 
+const @ModelName@_input_parameters& @ModelName@_susy_scale_constraint<Two_scale>::get_input_parameters() const
+{
+   return inputPars;
+}
+
+@ModelName@<Two_scale>* @ModelName@_susy_scale_constraint<Two_scale>::get_model() const
+{
+   return model;
+}
+
 void @ModelName@_susy_scale_constraint<Two_scale>::set_model(Two_scale_model* model_)
 {
    model = cast_model<@ModelName@<Two_scale>*>(model_);
