--- a/templates/two_scale_susy_scale_constraint.hpp.in
+++ b/templates/two_scale_susy_scale_constraint.hpp.in
@@ -49,13 +49,14 @@ public:
    void initialize();
    void set_input_parameters(const @ModelName@_input_parameters&);
 
+protected:
+   void update_scale();
+
 private:
    double scale;
    double initial_scale_guess;
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters inputPars;
-
-   void update_scale();
 };
 
 } // namespace flexiblesusy
