adapt high-scale constraint interface to susy-scale constraint

--- a/templates/two_scale_high_scale_constraint.hpp.in
+++ b/templates/two_scale_high_scale_constraint.hpp.in
@@ -44,17 +44,20 @@ public:
 
    void clear();
    double get_initial_scale_guess() const;
+   const @ModelName@_input_parameters& get_input_parameters() const;
+   @ModelName@<Two_scale>* get_model() const;
    void initialize();
    void set_input_parameters(const @ModelName@_input_parameters&);
    void set_scale(double); ///< fix unification scale (0 = unfixed)
+
+protected:
+   void update_scale();
 
 private:
    double scale;
    double initial_scale_guess;
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters inputPars;
-
-   void update_scale();
 };
 
 } // namespace flexiblesusy
