--- a/templates/two_scale_high_scale_constraint.cpp.in
+++ b/templates/two_scale_high_scale_constraint.cpp.in
@@ -113,6 +113,16 @@ double @ModelName@_high_scale_constraint<Two_scale>::get_initial_scale_guess() c
    return initial_scale_guess;
 }
 
+const @ModelName@_input_parameters& @ModelName@_high_scale_constraint<Two_scale>::get_input_parameters() const
+{
+   return inputPars;
+}
+
+@ModelName@<Two_scale>* @ModelName@_high_scale_constraint<Two_scale>::get_model() const
+{
+   return model;
+}
+
 void @ModelName@_high_scale_constraint<Two_scale>::set_model(Two_scale_model* model_)
 {
    model = cast_model<@ModelName@<Two_scale>*>(model_);
