define Lambda and mu2 to be real parameters

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -8,6 +8,8 @@ MINPAR = { {1, LambdaIN} };
 
 EWSBOutputParameters = { mu2 };
 
+RealParameters = { mu2, \[Lambda] };
+
 SUSYScale = v;
 
 SUSYScaleFirstGuess = 1000;
