output real parameters in SLHA1 blocks

--- a/model_files/cCMSSM/FlexibleSUSY.m.in
+++ b/model_files/cCMSSM/FlexibleSUSY.m.in
@@ -95,18 +95,18 @@ ExtraSLHAOutputBlocks = {
             {101, B[\[Mu]]},
             {102, vd},
             {103, vu} } },
-   {Au,    {{1, 1, T[Yu][1,1] / Yu[1,1]},
-            {2, 2, T[Yu][2,2] / Yu[2,2]},
-            {3, 3, T[Yu][3,3] / Yu[3,3]} } },
-   {Ad,    {{1, 1, T[Yd][1,1] / Yd[1,1]},
-            {2, 2, T[Yd][2,2] / Yd[2,2]},
-            {3, 3, T[Yd][3,3] / Yd[3,3]} } },
-   {Ae,    {{1, 1, T[Ye][1,1] / Ye[1,1]},
-            {2, 2, T[Ye][2,2] / Ye[2,2]},
-            {3, 3, T[Ye][3,3] / Ye[3,3]} } },
-   {MSOFT, {{1, MassB},
-            {2, MassWB},
-            {3, MassG},
+   {Au,    {{1, 1, Re[T[Yu][1,1] / Yu[1,1]]},
+            {2, 2, Re[T[Yu][2,2] / Yu[2,2]]},
+            {3, 3, Re[T[Yu][3,3] / Yu[3,3]]} } },
+   {Ad,    {{1, 1, Re[T[Yd][1,1] / Yd[1,1]]},
+            {2, 2, Re[T[Yd][2,2] / Yd[2,2]]},
+            {3, 3, Re[T[Yd][3,3] / Yd[3,3]]} } },
+   {Ae,    {{1, 1, Re[T[Ye][1,1] / Ye[1,1]]},
+            {2, 2, Re[T[Ye][2,2] / Ye[2,2]]},
+            {3, 3, Re[T[Ye][3,3] / Ye[3,3]]} } },
+   {MSOFT, {{1, Re[MassB]},
+            {2, Re[MassWB]},
+            {3, Re[MassG]},
             {21, mHd2},
             {22, mHu2},
             {31, Sqrt[Re[ml2[1,1]]]},
